After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733431 - Regression: Button not added to action area of dialog
Regression: Button not added to action area of dialog
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.13.x
Other All
: Normal major
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-07-20 00:13 UTC by Thomas Lange
Modified: 2014-07-20 05:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Test case of the bug (775 bytes, text/plain)
2014-07-20 00:13 UTC, Thomas Lange
Details

Description Thomas Lange 2014-07-20 00:13:57 UTC
Created attachment 281213 [details]
Test case of the bug

With GTK+ 3.13.4 buttons are not added to the action area of a dialog.

They are neither visible nor listed in the new GTK inspector.

Attached is a simple test case with a MessageDialog and a FileChooser example.